@@ -74,7 +74,7 @@ namespace ACE
               * @brief
               *
               */
-#if defined(_MSC_VER)
+#if (defined(_MSC_VER) || defined(__MINGW32__))
               class ACE_INET_Export INetConnectionKey
 #else
               class INetConnectionKey
